force-app/main/default/objects/Demo_Context__c/Demo_Context__c.object-meta.xml
<CustomObject>
    <description>Contexte de préparation d'une démo Salesforce : le SE saisit les éléments de la démo à venir, puis un prompt Einstein produit un grounding structuré (profil, pain points, hooks, objections, critères de succès) réutilisé par les autres prompts de la solution.</description>
    <label>Demo Context</label>
    <nameField>
        <displayFormat>DC-{00000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Demo Contexts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>