force-app/main/default/objects/Demo_Context__c/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <description>Nom de l'entreprise cliente pour laquelle la démo est préparée.</description>
    <label>Account Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>