force-app/main/default/objects/Demo_Context__c/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <description>The company that owns the sales rep — the organization for which the demo is being prepared. Distinct from Account_Name__c which is the rep's prospect or customer.</description>
    <label>Company</label>
    <length>255</length>
    <type>Text</type>
</CustomField>