force-app/main/default/objects/Demo_Context__c/fields/Company_Profile__c.field-meta.xml
<CustomField>
    <fullName>Company_Profile__c</fullName>
    <description>Généré par IA : profil synthétique de l'entreprise (taille, marché, positionnement, enjeux).</description>
    <label>Company Profile (AI)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>