force-app/main/default/objects/Demo_Context__c/fields/Context_Notes__c.field-meta.xml
<CustomField>
    <fullName>Context_Notes__c</fullName>
    <description>Éléments spécifiques connus : historique compte, projets en cours, signaux faibles, concurrents, contraintes.</description>
    <label>Context Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>