force-app/main/default/objects/Demo_Context__c/fields/Conversation_Hooks__c.field-meta.xml
<CustomField>
    <fullName>Conversation_Hooks__c</fullName>
    <description>Généré par IA : angles d'attaque conversationnels, phrases d'accroche, questions d'ouverture à fort impact.</description>
    <label>Conversation Hooks (AI)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>