force-app/main/default/objects/Demo_Context__c/fields/Demo_Goal__c.field-meta.xml
<CustomField>
    <fullName>Demo_Goal__c</fullName>
    <description>Objectif principal de la démo : quel message ou effet veut-on produire sur le client.</description>
    <label>Demo Goal</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>