force-app/main/default/objects/Demo_Context__c/fields/Meeting_Type__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Type__c</fullName>
    <description>Type de rendez-vous commercial pour lequel la démo est préparée.</description>
    <label>Meeting Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Découverte</fullName>
                <default>true</default>
                <label>Discovery</label>
            </value>
            <value>
                <fullName>Pitch</fullName>
            </value>
            <value>
                <fullName>Démo</fullName>
                <label>Demo</label>
            </value>
            <value>
                <fullName>Négociation</fullName>
                <label>Negotiation</label>
            </value>
            <value>
                <fullName>Closing</fullName>
            </value>
            <value>
                <fullName>Renouvellement</fullName>
                <label>Renewal</label>
            </value>
            <value>
                <fullName>QBR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>