force-app/main/default/objects/Demo_Context__c/fields/Objection_Map__c.field-meta.xml
<CustomField>
    <fullName>Objection_Map__c</fullName>
    <description>Généré par IA : objections probables et contre-arguments clés à préparer.</description>
    <label>Objection Map (AI)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>