force-app/main/default/objects/Demo_Context__c/fields/Pain_Points__c.field-meta.xml
<CustomField>
    <fullName>Pain_Points__c</fullName>
    <description>Généré par IA : douleurs métier probables selon industrie, type de RDV et personas.</description>
    <label>Pain Points (AI)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>