force-app/main/default/objects/Demo_Context__c/fields/Personas__c.field-meta.xml
<CustomField>
    <fullName>Personas__c</fullName>
    <description>Décideurs / participants prévus à la démo : noms, rôles, enjeux individuels.</description>
    <label>Personas</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>