force-app/main/default/objects/Demo_Context__c/fields/Success_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Success_Criteria__c</fullName>
    <description>Généré par IA : critères mesurables qui rendent cette démo un succès (next steps, signaux à obtenir).</description>
    <label>Success Criteria (AI)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>